crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_nav_collapsed_lockfile_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..37 Reset Reset BOLD
0 39..49 Reset Reset DIM
1 27..100 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..45 Reset Reset BOLD
2 50..56 Green Reset -
2 57..63 Red Reset -
2 84..99 Reset Reset DIM
2 99..100 Cyan Reset -
3 27..28 Cyan Reset -
3 28..60 Reset Reset DIM
3 89..99 Reset Reset DIM
3 99..100 Cyan Reset -
4 1..14 Reset Reset REVERSED
4 14..20 Green Reset REVERSED
4 20..21 Reset Reset REVERSED
4 21..27 Red Reset REVERSED
4 27..28 Cyan Reset -
4 99..100 Cyan Reset -
5 1..27 Reset Reset DIM
5 27..28 Cyan Reset -
5 99..100 Cyan Reset -
6 1..5 Reset Reset BOLD
6 27..28 Cyan Reset -
6 99..100 Cyan Reset -
7 27..28 Cyan Reset -
7 99..100 Cyan Reset -
8 9..11 Green Reset -
8 12..14 Red Reset -
8 14..26 Reset Reset DIM
8 27..28 Cyan Reset -
8 99..100 Cyan Reset -
9 9..11 Green Reset -
9 12..14 Red Reset -
9 14..23 Reset Reset DIM
9 27..28 Cyan Reset -
9 99..100 Cyan Reset -
10 27..28 Cyan Reset -
10 99..100 Cyan Reset -
11 1..27 Reset Reset DIM
11 27..28 Cyan Reset -
11 99..100 Cyan Reset -
12 1..6 Reset Reset BOLD
12 27..28 Cyan Reset -
12 99..100 Cyan Reset -
13 27..28 Cyan Reset -
13 99..100 Cyan Reset -
14 12..14 Green Reset -
14 15..17 Red Reset -
14 27..28 Cyan Reset -
14 99..100 Cyan Reset -
15 27..28 Cyan Reset -
15 99..100 Cyan Reset -
16 27..28 Cyan Reset -
16 99..100 Cyan Reset -
17 27..28 Cyan Reset -
17 99..100 Cyan Reset -
18 27..28 Cyan Reset -
18 99..100 Cyan Reset -
19 27..28 Cyan Reset -
19 99..100 Cyan Reset -
20 27..28 Cyan Reset -
20 99..100 Cyan Reset -
21 27..28 Cyan Reset -
21 99..100 Cyan Reset -
22 27..28 Cyan Reset -
22 99..100 Cyan Reset -
23 27..28 Cyan Reset -
23 99..100 Cyan Reset -
24 27..28 Cyan Reset -
24 99..100 Cyan Reset -
25 27..28 Cyan Reset -
25 99..100 Cyan Reset -
26 27..28 Cyan Reset -
26 99..100 Cyan Reset -
27 27..28 Cyan Reset -
27 99..100 Cyan Reset -
28 27..100 Cyan Reset -
29 0..97 Reset Reset DIM
