crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_nav_counts_update_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f2  M  +2 −0                           [A accept file] [U restore file]│"
"│  main · 3 files          │@@ -1 +1,3 @@                           [a accept] [u restore] [m flag]│"
"│  M f1  +1 −1             │ b                                                                     │"
"│  M f2  +2 −0             │+agent edit                                                            │"
"│  M parse.rs  +10 −2      │+second edit                                                           │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  n/p hunk  a accept hunk  A accept file  t hide empty  ? help  q quit             "
