crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_nav_full_paths_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 7 files · 9 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │docs/日本語.md  A  +3 −0               [A accept file] [U restore file]│" Hidden by multi-width symbols: [(34, " "), (36, " "), (38, " ")]
"│  main · 4 files          │@@ -0,0 +1,3 @@                         [a accept] [u restore] [m flag]│"
"│  A docs/日本語.md  +3 −0 │+# 日本語                                                              │" Hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (32, " "), (34, " "), (36, " ")]
"│  M f1  +1 −1             │+                                                                      │"
"│  M f2  +1 −0             │+wide characters                                                       │"
"│  M src/parse.rs  +10 −2  │                                                                       │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  n/p hunk  a accept hunk  A accept file  t hide empty  ? help  q quit             "
