crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_nav_range_selection_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │src/parse.rs  M  +10 −2             [A accept 3 files] [U restore file]│"
"│  main · 3 files          │@@ -1,4 +1,6 @@                         [a accept] [u restore] [m flag]│"
"│  M f1  +1 −1             │-//! A tiny line-oriented parser for the fixture's sample config text. │"
"│  M f2  +1 −0             │+//! A tiny line-oriented parser for `key = value` text.               │"
"│  M parse.rs  +10 −2      │+//!                                                                   │"
"│──────────────────────────│+//! Comment syntax follows the sample files: `#` to the end of the    │"
"│beta                      │+line.                                                                 │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │ /// One parsed record: a key, its value, and the line it came from.   │"
"│  A u2  +2 −0  [mixed]    │ #[derive(Debug, Clone, PartialEq, Eq)]                                │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│@@ -16,7 +18,7 @@                       [a accept] [u restore] [m flag]│"
"│W/notes                   │     let mut out = Vec::new();                                         │"
"│  draft · 1 file          │     for (i, raw) in text.lines().enumerate() {                        │"
"│  M n2.md  +2 −0          │         let line = raw.trim();                                        │"
"│                          │-        if line.is_empty() || line.starts_with('#') {                 │"
"│                          │+        if line.is_empty() || line.starts_with('#') ||                │"
"│                          │+line.starts_with("//") {                                              │"
"│                          │             continue;                                                 │"
"│                          │         }                                                             │"
"│                          │         let Some((key, value)) = line.split_once('=') else {          │"
"│                          │                                                                       │"
"│                          │@@ -51,4 +53,10 @@                      [a accept] [u restore] [m flag]│"
"│                          │         assert_eq!(records[0].key, "name");                           │"
"│                          │         assert_eq!(records[0].line, 3);                               │"
"│                          │     }                                                                 │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  n/p hunk  A accept 3 files  ^A accept all  t hide empty  ? help  q quit          "
